installation/istio-1.0.5/samples/bookinfo/networking/virtual-service-details-v1-v2-eq.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: details
spec:
  hosts:
    - details
  http:
  - route:
    - destination:
        host: details
        subset: v1
      weight: 50
    - destination:
        host: details
        subset: v2
      weight: 50
