installation/istio-1.0.5/samples/bookinfo/networking/virtual-service-ratings-v1-0-v2-100-db-eq.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings
spec:
  hosts:
    - ratings
  http:
  - route:
    - destination:
        host: ratings
        subset: v1
      weight: 0
    - destination:
        host: ratings
        subset: v2
      weight: 100
